--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  id-token: write   # required for OIDC federation
-  contents: read    # to checkout the repo
+  id-token: write
+  contents: read
 
 env:
   AWS_REGION: eu-north-1
@@ -20,9 +20,7 @@ env:
 
 jobs:
   build-and-deploy:
-    name: Build, Push, and Deploy
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -32,7 +30,6 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::714577032316:role/GitHubActions-ECS-Role-1
           aws-region: ${{ env.AWS_REGION }}
-
 
       - name: Log in to Amazon ECR
         id: login-ecr
@@ -53,13 +50,21 @@ jobs:
         run: |
           TASK_DEF=$(aws ecs describe-task-definition \
             --task-definition ${{ env.PROJECT_NAME }}-task \
-            --query taskDefinition)
-          
-          NEW_TASK_DEF=$(echo $TASK_DEF | \
-            jq --arg IMAGE_URI "$IMAGE_URI" \
-            --arg NAME "${{ env.CONTAINER_NAME }}" \
-            '.containerDefinitions[0].image=$IMAGE_URI | 
-             .family="${{ env.PROJECT_NAME }}-task"')
+            --query taskDefinition \
+            --output json)
+
+          NEW_TASK_DEF=$(echo "$TASK_DEF" | jq --arg IMAGE_URI "$IMAGE_URI" '
+          {
+            family: .family,
+            networkMode: .networkMode,
+            containerDefinitions: [.containerDefinitions[] | .image=$IMAGE_URI],
+            requiresCompatibilities: .requiresCompatibilities,
+            cpu: .cpu,
+            memory: .memory
+          }
+          + (if .executionRoleArn != null then {executionRoleArn: .executionRoleArn} else {} end)
+          + (if .taskRoleArn != null then {taskRoleArn: .taskRoleArn} else {} end)
+          ')
 
           echo "$NEW_TASK_DEF" > new-task-def.json
 
@@ -69,11 +74,12 @@ jobs:
             --output text)
 
           echo "TASK_REVISION=$TASK_REVISION" >> $GITHUB_ENV
+          echo "Registered new task definition: $TASK_REVISION"
 
       - name: Deploy to ECS Service
         run: |
           aws ecs update-service \
             --cluster ${{ env.ECS_CLUSTER }} \
             --service ${{ env.ECS_SERVICE }} \
-            --task-definition $TASK_REVISION \
+            --task-definition ${{ env.TASK_REVISION }} \
             --force-new-deployment
